fixed the template

--- a/demo/templates/index.tmpl
+++ b/demo/templates/index.tmpl
@@ -11,7 +11,7 @@
 		</div>
 		
 		$ {
-			HTML("Number of items: %i", cnt);
+			HTML("<h3>Number of items: %i<h3>", cnt);
 			for (int i = 0; i < cnt; i++) {
 				HTML("
 					<p>Item № %i</p>
