--- a/demo/templates/index.tmpl
+++ b/demo/templates/index.tmpl
@@ -1,22 +1,24 @@
+index_tmpl(char *name, int cnt)
+
 <!DOCTYPE html>
-	<head>
-		<title>Website</title>
-	</head>
-	<body>
-		<div style="border: 1px solid #000;">
-			<h1>Demo</h1>
-			$ {
-				HTML("<h2>Hi, %s</h2>", name);
-			}
-		</div>
-		
+<head>
+	<title>Website</title>
+</head>
+<body>
+	<div style="border: 1px solid #000;">
+		<h1>Demo</h1>
 		$ {
-			HTML("<h3>Number of items: %i</h3>", cnt);
-			for (int i = 0; i < cnt; i++) {
-				HTML(`
-					<p style="color: red;">Item № \`%i\`</p>
-				`, i + 1);
-			}
+			HTML("<h2>Hi, %s</h2>", name);
 		}
-	</body>
+	</div>
+
+	$ {
+		HTML("<h3>Number of items: %i</h3>", cnt);
+		for (int i = 0; i < cnt; i++) {
+			HTML(`
+				<p style="color: red;">Item № \`%i\`</p>
+			`, i + 1);
+		}
+	}
+</body>
 </html>
